Fix: Avoid using acronym as the primary name

--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -1,6 +1,6 @@
 {
-  "name": "Orpi",
-  "description": "Open Register of Penuciary Interests",
+  "name": "Open Register of Pecuniary Interests",
+  "description": "ORPI: Open Register of Pecuniary Interests",
   "start_url": "/",
   "display": "standalone",
   "scope": "/"
