--- a/app/views/interests/index.html.erb
+++ b/app/views/interests/index.html.erb
@@ -12,7 +12,7 @@
           <% if @is_search_mode %>
             Search results for "<%= @filter.query %>"
           <% else %>
-            Browse and filter interests by jurisdiction, party affiliation, and interest categories.
+            Browse and filter financial interests of political representatives by jurisdiction, party affiliation, and interest categories.
           <% end %>
         </p>
 
