--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,6 +1,9 @@
 <div class="navbar bg-base-100 shadow-sm">
   <div class="navbar-start">
-    <a class="btn btn-ghost text-xl" href="<%= root_path %>">Open Register of Penuciary Interests</a>
+    <a class="btn btn-ghost text-xl" href="<%= root_path %>">
+      <span class="hidden md:block">Open Register of Penuciary Interests</span>
+      <span class="block md:hidden">ORPI</span>
+    </a>
   </div>
   <div class="navbar-end">
     <div class="dropdown dropdown-end">
