--- a/app/views/interests/index.html.erb
+++ b/app/views/interests/index.html.erb
@@ -18,12 +18,12 @@
 
         <!-- Search Form -->
         <div class="w-full max-w-2xl mx-auto mb-4">
-          <%= form_with url: interests_path, method: :get, html: { role: "search", class: "join w-full shadow-lg" } do |f| %>
+          <%= form_with url: interests_path, method: :get, html: { role: "search", class: "md:join w-full md:shadow-lg" } do |f| %>
             <%= f.search_field :q,
                 value: @filter.query,
                 placeholder: "Search by MP name, electorate, company, or interest type...",
-                class: "input input-bordered join-item flex-1 text-lg h-12" %>
-            <%= f.button "Search", class: "btn btn-primary join-item h-12 px-8 text-lg", type: "submit", name: nil %>
+                class: "input input-bordered join-item flex-1 w-full md:w-auto text-base lg:text-lg h-12" %>
+            <%= f.button "Search", class: "btn btn-primary join-item h-12 px-8 text-lg md:join-item w-full md:w-auto", type: "submit", name: nil %>
             <!-- Preserve current filters -->
             <%= f.hidden_field :jurisdiction, value: @filter.jurisdiction_filter if @filter.jurisdiction_filter.present? %>
             <%= f.hidden_field :party, value: @filter.party_filter if @filter.party_filter.present? %>
