--- a/app/views/political_entities/index.html.erb
+++ b/app/views/political_entities/index.html.erb
@@ -28,7 +28,7 @@
       </div>
 
       <!-- Results Summary -->
-      <div class="flex justify-center w-full">
+      <div class="flex justify-center w-full lg:w-auto">
         <div class="stats stats-horizontal lg:shadow-lg bg-base-100 border border-base-300 rounded-2xl w-full">
           <div class="stat">
             <div class="stat-figure text-primary">
