Fix: Correct spelling

--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar bg-base-100 shadow-sm">
   <div class="navbar-start">
     <a class="btn btn-ghost text-xl" href="<%= root_path %>">
-      <span class="hidden md:block">Open Register of Penuciary Interests</span>
+      <span class="hidden md:block">Open Register of Pecuniary Interests</span>
       <span class="block md:hidden">ORPI</span>
     </a>
   </div>
